# dinoponera

./: .gitignore  DESIGN.md  LICENSE  README.md  calc_agent_design.md  calculate.py  call_flow.md  coding_intern.sh  planner.sh  pyproject.toml
.pi/agent/: EXECUTION_DISCIPLINE.md  INTERN.md  planner.md
baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  generators.baml  planner.baml
calc_types/: __init__.py  cpt.py  example.py  piled_foundation.py  settlement.py  soil.py
dinoponera/: __init__.py  config.py
dinoponera/agent/: __init__.py  deterministic_planning.py  io.py  planning.py
dinoponera/core/: __init__.py  graph_building.py  leaf_stub_generation.py  lint.py  models.py  naming.py  registry_introspection.py  render.py  script_generation.py  traversal.py
dinoponera/tools/: __init__.py  baml_cli.py
graphs/: example_doubling.json  piled_foundation.json  settlement.json
manual_workflow_tests/: test_geotechnical_piled_foundation.py  test_geotechnical_settlement.py
old/: DESIGN.md
registry/: __init__.py  decorators.py  index.py
registry/nodes/: __init__.py  calculate_pile_foundation_capacity.py  calculate_settlement.py  derive_pile_foundation_parameters_from_cpt.py  derive_settlement_parameters_from_cpt.py  double_value.py  example_source_value.py  format_result.py  hypothetical_cpt_data.py  (+4 more)
runs/: run_example_doubling.py  run_piled_foundation.py  run_settlement.py
tests/: test_calculate_script.py  test_config.py
(+10 files in other folders)
