[project]
name = "dinoponera"
version = "0.1.0"
description = "Auditable BAML-assisted calculation planning with deterministic Python script generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "baml-py==0.223.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
